--- a/app/src/main/res/layout/fragment_participant.xml
+++ b/app/src/main/res/layout/fragment_participant.xml
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content">
 
             <ImageView
-                android:id="@+id/imageView"
+                android:id="@+id/img_header_ticket_information"
                 android:layout_width="0dp"
                 android:layout_height="200dp"
                 android:scaleType="centerCrop"
@@ -39,7 +39,7 @@
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageView" />
+                app:layout_constraintTop_toBottomOf="@+id/img_header_ticket_information" />
 
             <LinearLayout
                 android:id="@+id/linear_layout_participant"
