--- a/app/src/main/res/xml/fragment_participant_scene.xml
+++ b/app/src/main/res/xml/fragment_participant_scene.xml
@@ -15,7 +15,7 @@
 
     <ConstraintSet android:id="@+id/start">
         <Constraint
-            android:id="@+id/imageView"
+            android:id="@+id/img_header_ticket_information"
             android:layout_width="0dp"
             android:layout_height="200dp"
             android:scaleType="centerCrop"
@@ -27,7 +27,7 @@
 
     <ConstraintSet android:id="@+id/end">
         <Constraint
-            android:id="@+id/imageView"
+            android:id="@+id/img_header_ticket_information"
             android:layout_width="0dp"
             android:layout_height="200dp"
             android:layout_marginTop="-200dp"
