--- a/app/src/main/res/xml/fragment_payment_summary_scene.xml
+++ b/app/src/main/res/xml/fragment_payment_summary_scene.xml
@@ -9,7 +9,7 @@
         <KeyFrameSet></KeyFrameSet>
         <OnSwipe
             motion:dragDirection="dragUp"
-            motion:touchAnchorId="@+id/rv_participant"
+            motion:touchAnchorId="@+id/layout_participant"
             motion:touchAnchorSide="top" />
     </Transition>
 
