--- a/app/src/main/res/layout/fragment_participant.xml
+++ b/app/src/main/res/layout/fragment_participant.xml
@@ -12,6 +12,8 @@
         android:layout_height="0dp"
         app:layoutDescription="@xml/fragment_participant_scene"
         app:layout_constraintBottom_toTopOf="@+id/button_next"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
@@ -42,8 +44,9 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_participant"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_marginTop="16dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_profile_name" />
 
     </androidx.constraintlayout.motion.widget.MotionLayout>
