--- a/app/src/main/res/layout/item_summary.xml
+++ b/app/src/main/res/layout/item_summary.xml
@@ -19,7 +19,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/tv_first_name"
+        android:id="@+id/tv_first_name_summary"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -32,7 +32,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_num" />
 
     <TextView
-        android:id="@+id/tv_last_name"
+        android:id="@+id/tv_last_name_summary"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -42,10 +42,10 @@
         android:textColor="@color/input_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_first_name" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_first_name_summary" />
 
     <TextView
-        android:id="@+id/tv_email"
+        android:id="@+id/tv_email_summary"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -57,6 +57,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_last_name" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_last_name_summary" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
