--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,13 +3,13 @@
     <item
         android:id="@+id/homeFragment"
         android:icon="@drawable/home"
-        android:title="@string/home" />
+        android:title="Home" />
     <item
         android:id="@+id/createEventFragment"
         android:icon="@drawable/plus"
-        android:title="@string/add_events" />
+        android:title="Nouveau" />
     <item
-        android:id="@+id/connexionFragment"
+        android:id="@+id/favoriteFragment"
         android:icon="@drawable/filled_star"
-        android:title="@string/favorites" />
+        android:title="Favoris" />
 </menu>
