--- a/app/src/main/res/layout/item_feed.xml
+++ b/app/src/main/res/layout/item_feed.xml
@@ -28,6 +28,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:text="Name"
+        android:textColor="@color/text_default"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/tv_category"
@@ -59,6 +60,7 @@
         android:paddingStart="8dp"
         android:paddingEnd="8dp"
         android:text="15.00€"
+        android:textColor="@color/input_text"
         android:textFontWeight="700"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@+id/iv_event"
@@ -118,6 +120,7 @@
             android:layout_height="wrap_content"
             android:paddingLeft="4dp"
             android:text="0/100"
+            android:textColor="@color/input_text"
             android:textFontWeight="700" />
     </LinearLayout>
 
