--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -63,4 +63,15 @@
         <item name="colorOnPrimary">@color/red</item>
     </style>
 
+    <style name="timepicker" parent="Theme.AppCompat.Light.Dialog">
+        <item name="colorPrimary">@color/red</item>
+        <item name="colorPrimaryDark">@color/red</item>
+        <item name="colorAccent">@color/red</item>
+        <item name="colorControlActivated">@color/red</item>
+        <item name="colorControlHighlight">@color/red</item>
+        <item name="colorOnPrimary">@color/red</item>
+    </style>
+
+
+
 </resources>
