--- a/app/src/main/res/drawable/edit_text_selector.xml
+++ b/app/src/main/res/drawable/edit_text_selector.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:state_enabled="true" android:state_focused="true">
+    <item android:state_focused="true">
         <shape android:shape="rectangle">
             <solid android:color="@color/input_background" />
             <corners android:radius="16dp" />
@@ -12,6 +12,12 @@
     <item android:state_enabled="true">
         <shape android:shape="rectangle">
             <solid android:color="@color/input_background" />
+            <corners android:radius="16dp" />
+        </shape>
+    </item>
+    <item android:state_enabled="false">
+        <shape android:shape="rectangle">
+            <solid android:color="@color/input_disabled" />
             <corners android:radius="16dp" />
         </shape>
     </item>
