--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="text_default">#000000</color>
     <color name="input_background">#FFFFFF</color>
     <color name="input_text">#000000</color>
+    <color name="input_disabled">#DDDDDD</color>
 </resources>
