--- a/app/src/main/res/layout/fragment_connexion.xml
+++ b/app/src/main/res/layout/fragment_connexion.xml
@@ -25,6 +25,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:text="Connexion"
+        android:textColor="@color/text_default"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="@+id/bt_return2"
         app:layout_constraintEnd_toEndOf="parent"
@@ -97,42 +98,41 @@
 
     <Button
         android:id="@+id/bt_connex"
+        style="@style/Button_Red"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="166dp"
         android:layout_marginEnd="16dp"
+        android:layout_marginBottom="8dp"
         android:text="Se connecter"
+        app:layout_constraintBottom_toTopOf="@+id/tv_mdp_oublie"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bt_google_connect2"
-        style="@style/Button_Red"/>
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/tv_mdp_oublie"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
         android:text="Mot de passe oublié?"
         android:textColor="#5377F8"
+        app:layout_constraintBottom_toTopOf="@+id/bt_create_account"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bt_connex" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/bt_create_account"
+        style="@style/Button_Red"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="32dp"
         android:text="Créer un compte"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_mdp_oublie"
-        style="@style/Button_Red"/>
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
