--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -37,6 +37,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Inscription"
+                android:textColor="@color/text_default"
                 android:textSize="24sp"
                 app:layout_constraintBottom_toBottomOf="@+id/bt_return"
                 app:layout_constraintEnd_toEndOf="parent"
